--- a/MSVS/Bare-Bones-Minecraft-Server/Bare Bones Minecraft Server.vcxproj.filters
+++ b/MSVS/Bare-Bones-Minecraft-Server/Bare Bones Minecraft Server.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClInclude Include="..\..\include\uuid.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\include\nbt.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\biomes.cpp">
@@ -102,6 +105,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\uuid.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\nbt.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
