--- a/MSVS/Bare-Bones-Minecraft-Server/Bare Bones Minecraft Server.vcxproj
+++ b/MSVS/Bare-Bones-Minecraft-Server/Bare Bones Minecraft Server.vcxproj
@@ -165,6 +165,7 @@
     <ClInclude Include="..\..\include\eventhandler.h" />
     <ClInclude Include="..\..\include\lib\thread-pool\thread_pool.hpp" />
     <ClInclude Include="..\..\include\lockedclient.h" />
+    <ClInclude Include="..\..\include\nbt.h" />
     <ClInclude Include="..\..\include\networkhandler.h" />
     <ClInclude Include="..\..\include\networkpackets.h" />
     <ClInclude Include="..\..\include\server.h" />
@@ -181,6 +182,7 @@
     <ClCompile Include="..\..\src\entities.cpp" />
     <ClCompile Include="..\..\src\eventhandler.cpp" />
     <ClCompile Include="..\..\src\lockedclient.cpp" />
+    <ClCompile Include="..\..\src\nbt.cpp" />
     <ClCompile Include="..\..\src\networkhandler.cpp" />
     <ClCompile Include="..\..\src\server.cpp" />
     <ClCompile Include="..\..\src\serverevents.cpp" />
